# EcoInter

./: Makefile  README.md  knn-heatmap.eps  ms_netflix.tex  pearson.eps  tanimoto.eps  tanimoto2.eps  tanimoto_n_preys.eps
Figures/python/: tanimoto.py  tanimoto_n_preys.py
Figures/r/: inter_heatmap.r
KNN/: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md
KNN/data/: mercure-interactions.csv  mercure-real.csv  mercure-trait-codes.txt  mercure-traits.csv
KNN/include/mercure/: common.hh  confusion.hh
KNN/include/mercure/io/: intersperse.hh  show_flat.hh  string_utils.hh  tokenize.hh
KNN/include/mercure/knn/: imputation.hh  recommendations.hh  set.hh  similarity.hh  symat.hh  tanimoto.hh
KNN/scripts/: debug.sh  install.sh
KNN/src/: fuzzthatneighbour.cc  impute.cc  recommend.cc  recommend_real.cc  recommendations.cc
KNN/test/: CMakeLists.txt  set.cc  symat.cc  tanimoto.cc
Supervised Learning/: README.md  header.txt  randomrandomforests.py  rf.py  rf_nonbinaries.py
